# vscode

synk-lib/: CMakeLists.txt  Dockerfile
synk-lib/lib/: CMakeLists.txt
synk-lib/lib/include/: sync_primitives.h
synk-lib/lib/src/: sync_primitives.c
synk-lib/src/: CMakeLists.txt  example.c
synk-lib/test/: CMakeLists.txt  test_sync.c
